k8s/gateway/keycloak-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-https
  namespace: keycloak
spec:
  parentRefs:
  - name: https-gateway
    namespace: personal-finance
  hostnames:
  - "keycloak.localtest.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-service
      port: 8080
